FIX: flipcard hover changing box size causing annoying word wrap to happen

--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -281,6 +281,7 @@ body, html {
 
 .flipCard {
   animation: card-glow 5s infinite alternate;
+  padding: 2px;
 }
 
 .flipCard:hover {
